testsuite/deprecated/veronac/resolution/compile-fail/primitive-field.out/stderr.txt
primitive-field.verona:6:3: error: Primitives cannot have fields
  f: None & imm;
  ^~~~~~~~~~~~~~
1 error generated
